# PagerDuty-Ops-Scripts

./: .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO.md  PRODUCTION_READINESS_AUDIT.md  README.md  SECURITY.md  demo_sample_output.py  pagerduty_ops.py  pd_alert_grouping.py  pd_apply_event_orchestration_rules.py  pd_apply_tags.py  pd_audit_export.py  pd_bulk_extensions.py  pd_bulk_maintenance_window.py  pd_common.py  pd_event_orchestration_rules.py  pd_export_change_events.py  pd_export_ids.py  pd_export_log_entries.py  pd_get_teams_user_role.py  pd_list_incidents.py  pd_list_schedules.py  pd_list_status_pages.py  pd_list_teams.py  pd_list_users.py  pd_patch_role.py  pd_remove_team_members.py  pd_rename_resources.py  pd_scim_user_audit.py  pd_standards_report.py  pd_teams.csv  pd_update_escalation_policy_names.py  pd_update_schedule_names.py  pd_update_service_names.py  (+7 more)
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  demo.yml  gitleaks.yml  release.yml
audit/proposed/: ci.yml  pd_common_improved.py  pd_update_team_roles_v2.py  pre-commit-config.yaml  pyproject.toml
audit/proposed/tests/: test_cli_smoke.py  test_pd_common.py
docs/: architecture.md  runbook.md  secrets.md  usage.md
pagerduty/: __init__.py  _meta.py  api_client.py  cli_common.py  config.py  errors.py  logging.py  redaction.py  utils.py
pagerduty/resources/: __init__.py  base.py  escalation_policies.py  schedules.py  services.py  teams.py  users.py  webhooks.py
pagerduty_ops/: __init__.py  api.py  bulkops.py  cli.py  config.py  console_scripts.py  log.py  output.py
pagerduty_ops/commands/: __init__.py  alert_grouping.py  apply_tags.py  audit_export.py  bulk_extensions.py  bulk_maintenance_window.py  event_orchestration.py  export_change_events.py  export_ids.py  export_log_entries.py  list_incidents.py  list_schedules.py  list_status_pages.py  list_teams.py  list_users.py  patch_role.py  remove_team_members.py  rename_resources.py  scim_user_audit.py  service_urgency.py  standards_report.py  team_members.py  update_team_roles.py  v3_schedules.py
python/: pyvenv.cfg
python/Scripts/: activate  activate.bat
tests/: conftest.py  test_api_client.py  test_cli_common.py  test_cli_help_flags.py  test_config.py  test_integration_api.py  test_pagerduty_ops.py  test_redaction.py  test_requirements_sync.py
tests/integration/: test_readonly_api.py
tests/unit/: test_api.py  test_bulkops.py  test_cli.py  test_commands.py  test_config_and_output.py  test_shims.py
