[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pagerduty-ops-scripts"
version = "1.0.0"
description = "Production-hardened operational automation for PagerDuty"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.2.2",
    "tabulate>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "responses>=0.25.0",
    "pip-audit>=2.7.0",
]

[project.scripts]
pd-list-users = "pagerduty_ops.console_scripts:pd_list_users"
pd-list-teams = "pagerduty_ops.console_scripts:pd_list_teams"
pd-list-schedules = "pagerduty_ops.console_scripts:pd_list_schedules"
pd-list-incidents = "pagerduty_ops.console_scripts:pd_list_incidents"
pd-list-status-pages = "pagerduty_ops.console_scripts:pd_list_status_pages"
pd-v3-schedules = "pagerduty_ops.console_scripts:pd_v3_schedules"
pd-export-ids = "pagerduty_ops.console_scripts:pd_export_ids"
pd-audit-export = "pagerduty_ops.console_scripts:pd_audit_export"
pd-export-log-entries = "pagerduty_ops.console_scripts:pd_export_log_entries"
pd-export-change-events = "pagerduty_ops.console_scripts:pd_export_change_events"
pd-scim-user-audit = "pagerduty_ops.console_scripts:pd_scim_user_audit"
pd-standards-report = "pagerduty_ops.console_scripts:pd_standards_report"
pd-patch-role = "pagerduty_ops.console_scripts:pd_patch_role"
pd-rename-resources = "pagerduty_ops.console_scripts:pd_rename_resources"
pd-team-members = "pagerduty_ops.console_scripts:pd_team_members"
pd-update-team-roles = "pagerduty_ops.console_scripts:pd_update_team_roles"
pd-remove-team-members = "pagerduty_ops.console_scripts:pd_remove_team_members"
pd-service-urgency = "pagerduty_ops.console_scripts:pd_service_urgency"
pd-bulk-maintenance-window = "pagerduty_ops.console_scripts:pd_bulk_maintenance_window"
pd-apply-tags = "pagerduty_ops.console_scripts:pd_apply_tags"
pd-bulk-extensions = "pagerduty_ops.console_scripts:pd_bulk_extensions"
pd-alert-grouping = "pagerduty_ops.console_scripts:pd_alert_grouping"
pd-eo-export = "pagerduty_ops.console_scripts:pd_eo_export"
pd-eo-apply = "pagerduty_ops.console_scripts:pd_eo_apply"

[tool.setuptools]
packages = ["pagerduty_ops", "pagerduty_ops.commands"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["audit", "demo_sample_output.py"]

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle / pyflakes
    "B",            # bugbear
    "I",            # import sorting
    "UP",           # pyupgrade
    "S",            # bandit security rules
]
ignore = [
    "S101",  # assert — fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106", "S603"]
"pd_*.py" = ["E402"]
"update_service_notifications.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
addopts = "-q"

[tool.coverage.run]
source = ["pagerduty_ops"]
