[project]
name = "pagerduty-ops-scripts"
version = "0.1.0"
description = "Operational automation scripts for PagerDuty"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "prettytable>=3.17.0",
    "python-dotenv>=1.2.2",
    "tabulate>=0.10.0",
]

[dependency-groups]
dev = ["ruff", "pre-commit", "pytest", "responses", "pip-audit"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "B",             # bugbear (mutable defaults, etc.)
    "S",             # bandit security rules
    "I",             # import sorting
    "UP",            # pyupgrade
]
ignore = [
    "S101",  # assert (tests)
    "S603",  # subprocess (smoke test is intentional)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S106", "S108"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
